Added: Repository, Controller, Entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+## Conecction pool config set up
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
+## PostgreSQL set up
+spring.datasource.url=jdbc:postgresql://127.0.1:5432/pruebatecnica
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=true
+
+logging.level.org.hibernate.sql=debug
