--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL set up
-spring.datasource.url=jdbc:postgresql://127.0.1:5432/pruebatecnica
+spring.datasource.url=jdbc:postgresql://localhost:5432/pruebatecnica
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
